<resources>
    <string name="app_name">First lab</string>
    <string name="splash_text">WordsFactory</string>
    <string name="onboard_header1">Learn anytime \nand anywhere</string>
    <string name="onboard_text1">Quarantine is the perfect time to spend your \nday learning something new, from anywhere!</string>
    <string name="onboard_header2">Find a course \nfor you</string>
    <string name="onboard_text2">Quarantine is the perfect time to spend your \nday learning something new, from anywhere!</string>
    <string name="onboard_header3">Improve your skills</string>
    <string name="onboard_text3">Quarantine is the perfect time to spend your \nday learning something new, from anywhere!</string>
    <string name="skip_text">Skip</string>
    <string name="onboard_button1">Next</string>
    <string name="onboard_button2">Next</string>
    <string name="onboard_button3">"Let's Start"</string>
    <string name="signup_header">Sign up</string>
    <string name="signup_description">Create your account</string>
    <string name="namefield_hint">Name</string>
    <string name="emailfield_hint">E-mail</string>
    <string name="passwordfield_hint">Password</string>
    <string name="signup_button">Sign up</string>
    <string name="login_button">Log in</string>
    <string name="dictionary_button">Add to Dictionary</string>
    <string name="dictionary_search_hint">Cooking</string>
    <string name="dictionary_word_header_template">Cooking</string>
    <string name="dictionary_transcription_template">[ˈkʊkɪŋ]</string>
    <string name="dictionary_partofspeech_header_templater">Part of Speech:</string>
    <string name="dictionary_partofspeech_template">Noun</string>
    <string name="dictionary_meanings_header_template">Meanings:</string>
    <string name="dictionary_meanings_example1_description_template">The practice or skill of preparing food by
    \ncombining, mixing, and heating ingredients.</string>
    <string name="dictionary_meanings_example1_template"><font color='#65AAEA'>Example:</font> he developed an interest in cooking.</string>
    <string name="dictionary_meanings_example2_description_template">The practice or skill of preparing food by\n
    combining, mixing, and heating ingredients.</string>
    <string name="dictionary_meanings_example2_template"><font color='#65AAEA'>Example:</font> he developed an interest in cooking.</string>
    <string name="dictionary_navbar_button1">Dictionary</string>
    <string name="dictionary_navbar_button2">Training</string>
    <string name="dictionary_navbar_button3">Video</string>
    <string name="example_string"><font color='#65AAEA'>Example: </font></string>
    <string name="training_button">Start</string>
    <string name="training_header">The are no words\nin your Dictionary.\n\nYou should add words to Dictionary.</string>
    <string name="training_text_template">The practice or skill of\npreparing food by combining,\nmixing, and heating\ningredients.</string>
    <string name="training_finished_header">Training is finished</string>
    <string name="training_finished_button">Again</string>
</resources>